# cdrmind

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: main.py
app/agents/: incident_reporter.py  log_summarizer.py  quick_analyst.py  threat_classifier.py
app/api/routes/: agents.py  eval.py  incidents.py
app/core/: config.py  logging.py  security.py
app/db/: session.py
app/models/: evaluation.py  incident.py
app/schemas/: agent.py  incident.py  log.py
app/services/: audit.py  guardflow_client.py  llm.py  raggy_client.py  taskonaut_client.py
data/mitre/: attack_patterns.json
docs/: architecture.md  threat_model.md
eval/: citation_verifier.py  golden_dataset.json  groundedness.py  hallucination.py  scorer.py
examples/: classify.json  report.json  summarize.json
scripts/: ingest_mitre.py  verify_llm.py
tests/integration/: test_eval_harness.py  test_soc_pipeline.py
tests/red_team/: test_prompt_injection.py
tests/unit/: test_eval_scorer.py  test_incident_reporter.py  test_log_summarizer.py  test_threat_classifier.py
